Move Normalization code into destination images instead of being an additional docker image in sync worker